[package]
name = "helium-jsonrpc-rs"
version = "1.0.1"
readme = "README.md"
description = "An async library for the Helium blockchain JSON_RPC interface"
authors = ["Kyle Bales <masterjedi@gmail.com>"]
edition = "2018"

[dependencies]
reqwest = {version = "0", default-features=false, features = ["gzip", "json", "rustls-tls"]}
serde =  {version = "1", features=["derive"]}
serde_json = "1"
base64 = "0"
rust_decimal = {version = "1", features = ["serde-float"] }
thiserror = "1"
futures = "0"
async-trait = "0"

[dev-dependencies]
tokio = {version = "1", features = ["full"]}
