[package]
authors = ["Kyle Bales <masterjedi@gmail.com>", "Chris Bruce <chris@dewi.org"]
description = "An async library for the Helium blockchain-node JSON_RPC interface"
edition = "2018"
license-file = "LICENSE"
name = "helium-jsonrpc"
readme = "README.md"
version = "1.0.1"

[dependencies]
async-trait = "0"
base64 = "0"
futures = "0"
helium-api = {git = "https://github.com/helium/helium-api-rs"}
reqwest = {version = "0", default-features = false, features = ["gzip", "json", "rustls-tls"]}
rust_decimal = {version = "1", features = ["serde-float"]}
serde = {version = "1", features = ["derive"]}
serde_json = "1"
thiserror = "1"

[dev-dependencies]
tokio = {version = "1", features = ["full"]}
